fixed global overflow

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -9,7 +9,6 @@ body {
     background-image: -webkit-linear-gradient(right bottom, #0A0707 0%, #110C0D 50%, #0C090A 100%);
     background-image: linear-gradient(right bottom, #0A0707 0%, #110C0D 50%, #0C090A 100%);
     font-size: 16px;
-    min-height: 100vh;
 }
 
 .main {
